--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "handlebars": "^4.0.11",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.5.3",
     "zone.js": "^0.8.14"
